Finished draft of meta book chapter.

--- a/presentations/grouptalk_jun-2012/pres.tex
+++ b/presentations/grouptalk_jun-2012/pres.tex
@@ -21,7 +21,7 @@
 \newcommand{\minimize}[1]{\JLUminimize_{#1}\;&}
 \newcommand{\subto}{\text{subject to}\;&}
 
-\title{Jesse Lu, group presentation, 2012-06-07}
+\title{Jesse Lu, inverse design mini-conf, 2012-07-02}
 \author{}
 \MyLogo{}
 \date{}
@@ -76,25 +76,25 @@
 \myfig{m2}
 \myfig{m6}
 
-\oursection{One more thing...}
-\myfig{L3med}
-\myfig{wg1}
-\myfig{wg2}
-\myfig{wg3}
-\myfig{disk1}
-\myfig{disk2}
-\myfig{disk3}
-\myfig{disk4}
-\myfig{disk5}
-\myfig{disk6}
-\myfig{disk7}
-\myfig{med1}
-\myfig{med2}
-\myfig{med3}
-\myfig{med4}
-\myfig{med5}
-\myfig{hi1}
-\myfig{hi2}
-\myfig{hi3}
+% \oursection{One more thing...}
+% \myfig{L3med}
+% \myfig{wg1}
+% \myfig{wg2}
+% \myfig{wg3}
+% \myfig{disk1}
+% \myfig{disk2}
+% \myfig{disk3}
+% \myfig{disk4}
+% \myfig{disk5}
+% \myfig{disk6}
+% \myfig{disk7}
+% \myfig{med1}
+% \myfig{med2}
+% \myfig{med3}
+% \myfig{med4}
+% \myfig{med5}
+% \myfig{hi1}
+% \myfig{hi2}
+% \myfig{hi3}
 
 \end{document}
