--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -29,12 +29,10 @@
     
 
 Our initial foray into design methods for nanophotonic devices
-    began with a very simple and naive question: that is,
-    if, when presented with a nanophotonic structure,
-    we can solve for the electromagnetic fields it produces;
-    then, why don't we just make an inverse solver which,
+    began with a very simple and naive question: 
+    could we make an inverse solver which,
     when given the electromagnetic fields we desire,
-    returns the nanophotonic structure that will produce them? %ref.
+    returns the nanophotonic structure that will produce them\cite{opex3}?
 In other words, since we already know how to solve for $E$ and $H$ 
     in Maxwell's equations, why can't we solve for $\epsilon$
     or even $\mu$ instead?
@@ -46,7 +44,7 @@ Over the subsequent years, we were able to come up with a better solution,
     which we call an ``objective-first'' strategy for nanophotonic design,
     and which we present in this chapter.
 Although it is much more advanced than our original idea,
-    objective-first design still carries the same fundamental concept;
+    objective-first design still carries the same fundamental concept,
     which is to specify the electromagnetic fields, and then
     to solve for a structure to produce them.
     
@@ -54,7 +52,7 @@ In this chapter, we present the simple theoretical underpinnings of
     objective-first design in the first two sections,
     and then show examples of the method in action in the rest of the chapter.
 We also include the source code that was used to generate
-    all results presented herein. %ref!
+    all results presented herein\cite{code}.
     
 
 \input{wave_eq}
@@ -62,31 +60,61 @@ We also include the source code that was used to generate
 \input{wg}
 \input{cloak}
 \input{mimic}
+\input{extensions}
 
-\section{Extending the method}
-The objective-first method, as applied in the examples in this chapter,
-    really only represent a small foray into the area of nanophotonic design.
-Several key extensions to what is presented here are needed to
-    fully address real-world nanophotonic design challenges.
+\section{Conclusion}
+We have introduced an objective-first approach
+    to the design of nanophotonic components, and
+    applied it to the design of waveguide couplers,
+    optical cloaks, and optical mimics.
+In doing so, we hope to have exhibited both the simplicity
+    and the breadth of our method to the design of a broad
+    class of linear, single-mode devices.
+In addition to posting the source code for all the examples online\cite{code}, 
+    we have outlined the necessary extensions to our method in order
+    to design practical, three-dimensional devices.
 
-\subsection{3D}
-The first of these is the need to design fully three-dimensional structures.
-Doing so provides no inherent difficulties aside from the matrices in
-    \ER{Ab} becoming very large.
-This is not insurmountable as electromagnetic simulation software for 
-    three-dimensional nanophotonic structures already exists.
+\section{Acknowledgements}
+This work has been supported by the 
+    AFOSR MURI for Complex and Robust On-chip Nanophotonics 
+    (Dr. Gernot Pomrenke), grant number FA9550-09-1-0704; 
+    and the Alexander von Humboldt Foundation.
 
-Also software to solve \ER{Bd} in three-dimensions does not exist,
-    the size of matrix $B(x)$ can be greatly compressed by considering
-    only fabrication processes which modify a structure in-plane.
-Thus, the degrees of freedom in $p$ can be greatly reduced and the original
-    methods used in this chapter can still be applied.
-    
-\subsection{Multi-mode}
-A second necessary extension is to be able to consider the multiple fields
-    that a structure produces.
-This includes fields of different frequencies and inputs.
 
-\subsection{Robustness}
-\subsection{Binary structure}
-
+\begin{thebibliography}{99.}%
+\bibitem{boyd} S. Boyd, and L. Vandenberghe, 
+    \emph{Convex Optimization} 
+    (Cambridge University Press, 2004)
+\bibitem{cvx} M. Grant and S. Boyd, \emph{CVX: Matlab software for disciplined convex programming}, version 1.21. \verb+http://cvxr.com/cvx+, January 2011.
+\bibitem{admm} S. Boyd, N. Parikh, E. Chu, B. Peleato, and J. Eckstein, 
+    ``Distributed Optimization and Statistical
+    Learning via the Alternating Direction
+    Method of Multipliers,''
+    Foundations and Trends in Machine Learning, \textbf{3} 1–122 (2011).
+\bibitem{pml} S. G. Johnson, ``Notes on Perfectly Matched Layers (PMLs),''
+    http://math.mit.edu/~stevenj/18.369/pml.pdf, (2010). 
+\bibitem{opex1} J. Lu, and J. Vuckovic, 
+    ``Inverse design of nanophotonic structures using complementary convex optimization,''
+    Opt. Express \textbf{18}, 3793--3804 (2011). 
+% \bibitem{opex2} J. Lu, S. Boyd, and J. Vuckovic, 
+%     ``Inverse design of a three-dimensional nanophotonic resonator,''
+%     Opt. Express \textbf{19}, 10563--10750 (2011). 
+\bibitem{opex3} J.Lu, and J. Vuckovic,
+    ``Objective-first design of high-efficiency, small-footprint couplers between arbitrary nanophotonic waveguide modes,''
+    Opt. Express \textbf{20}, 7221--7236 (2012).
+\bibitem{code} https://github.com/JesseLu/objective-first
+\bibitem{miller} O. D. Miller, ``Photonic Design: From Fundamental Solar Cell Physics to Computational Inverse Design,''
+    U. C. Berkeley, (2012).
+\bibitem{shin} W. Shin, S. Fan, ``Choice of the perfectly matched layer boundary condition for frequency-domain Maxwell’s equations solvers,''
+    J. Comp. Phys. \textbf{231}, 3406--3431 (2012).
+\bibitem{simp} M. P. Bendsoe, and O. Sigmund, 
+    ``Material interpolation schemes in topology optimization,''
+    Archive of Applied Mechanics \textbf{69}, 635--654 (1999).
+\bibitem{taflove} A. Taflove, and S. C. Hagness, 
+    \emph{Computational Electrodynamics, Third Ed.}
+    Section 3.3.2, (Artech House, 2005).
+\bibitem{yee} K. S. Yee,
+    ``Numerical Solution of Initial Boundary Value Problems Involving
+    Maxwell's Equations in Isotropic Media,''
+    IEEE Trans. Antennas and Propagation \textbf{14}, 802--807 (1966).
+\end{thebibliography}
