Sent draft to Ken.

--- a/presentations/meta_book/extensions.tex
+++ b/presentations/meta_book/extensions.tex
@@ -1,7 +1,7 @@
 
 \section{Extending the method}
 The objective-first method, as applied in the examples in this chapter,
-    really only represent a small foray into the area of nanophotonic design.
+    represents only a small foray into the area of nanophotonic design.
 Several key extensions to what is presented here are needed to
     fully address real-world nanophotonic design challenges.
 
@@ -60,8 +60,8 @@ This is not trivial since a naive restatement of \ER{ob1}
         & p \in \{p_0, p_1\}, \notag \EA
     results in a very difficult combinatorial problem.
 
-Tractable approaches include penalizing intermediate values of $p$\cite{simp}
-    or even transferring to a level-set method\cite{miller}
+Tractable approaches include penalizing intermediate values of $p$ \cite{simp}
+    or even transferring to a level-set method \cite{miller}
     where the distinction between materials is explicit.
 
 \subsection{Robustness}
