--- a/presentations/meta_book/ob1.tex
+++ b/presentations/meta_book/ob1.tex
@@ -38,7 +38,7 @@ Before formulating the design problem,
     optimization problems.
 
 Specifically, we want to introduce the notion of \emph{convexity}\cite{boyd}
-    and to simply note the difference between problems that
+    and to note the difference between problems that
     are convex and those which are not.
 The difference is simply this:
     convex problems have a single optimum point
@@ -193,7 +193,7 @@ To this end, we employ the alternating directions optimization method.
 
 \subsection{Alternating directions}
 We use a simple alternating directions scheme 
-    to peice together \ER{Fsub} and \ER{Ssub},
+    to piece together \ER{Fsub} and \ER{Ssub},
     which is to say that we simply
     alternately solve each and continue until we reach some stopping point,
     normally measured by how much the physics residual has decreased.
