--- a/sermons/Revelation1:4.tex
+++ b/sermons/Revelation1:4.tex
@@ -7,11 +7,62 @@
 \part*{Revelation 1:4 --- Grace and Peace from God, Part 1}
 \tableofcontents
 \BI
-\section*{The Need for Grace and Peace}
-\I one
+\section*{Introduction}
+\I Review v. 1-3:
+\BI \I  Person of Revelation: Jesus Christ,
+    \I  Purpose of Revelation: to show His servants,
+    \I  Power of Revelation: the word of God,
+    \I  Promise of Revelation: Blessed are those who hear and obey. \EI
 
-\section*{The Source of Grace and Peace}
-\I two
+\I  John then identifies Himself and His recipients and greets them with a blessing.
+\I  Read v. 4-8, and introduce the two main points.
+
+
+
+
+\section{The blessing of grace and peace}
+\subsection{What is the blessing?}
+\I  We can ask if the blessing is 
+\BI \I  a well-wishing? No.
+    \I  a prayer? No.
+    \I  referring to some past or future event? No. 
+    \I  the letter itself? Yes. \EI
+\I  Revelation itself is grace and peace to believers.
+\BI \I  In a way, John is saying ``Grace to you and peace'' while thrusting the letter into our hands. \EI
+\I  John tells us what category the letter belongs in, and what effect it should have in our lives,
+    namely grace and peace.
+\BI \I  Not fear and anxiety, or
+    \I  distress and mourning. \EI
+
+\subsection{Why are these important?}
+\I  These are two of the most dire needs of the believer.
+\BI \I  Grace: Undeserved favor from God.
+    \I  Peace: Steadfastness in trials. \EI
+\I  In what areas of your life do you most need grace and peace?
+\BI \I  In a family or marriage relationship?
+    \I  In a difficult situation at work?
+    \I  Dealing with a besetting sin?
+    \I  Health issue? \EI
+\I  John tells us that the source of grace and peace is God.
+\BI \I  That is to say Revelation is grace and peace to us because it points us to God. \EI
+\I  And so our most dire need is to know God, worship God, and obey God.
+\BI \I  John immediately gives us help in this passage by showing us who God is. \EI
+
+\section{The source of grace and peace}
+\I  The source of grace and peace is the triune God.
+\I  We will focus on the Father
+\BI \I  The phrase ``Him who is and who was and who is to come'' is unique to Revelation.
+    \I  Pregnant with meaning and endless in glory. \EI
+\I  That God is ``Him who is nad who was and who is to come'' means
+\BI \I  that He is eternal,
+    \I  that He is transcendent,
+    \I  that He is self-existent. \EI
+
+\subsection{God is eternal}
+\I  That is, He is eternally existent, He lives forever.
+\BI \I    
+\subsection{God is transcendent}
+\subsection{God is present}
 \EI
 
 \end{document}
